--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,7 +5,7 @@ en:
     site_title: &site_title StreetSeen
 
   layouts:
-    _navigation:
+    navigation:
       about: About
       public_studies: Public Studies
       help: Help
