Added info icon layout that can be included as a partial. It will pull text from the translation file.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,3 +33,8 @@ en:
       title: Editing comparison
       show: *show
       back: *back
+
+  help:
+    image_set:
+      title: What is an image set?
+      content: An Image Set defines the set of images used by your study. An image set consists of multiple areas or cities each of which contains many images.
